--- a/.htaccess
+++ b/.htaccess
@@ -43,4 +43,5 @@ RewriteRule ^([\w\-\_]+)/settings.php settings.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/login.php login.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/login2.php login2.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/$ index.php?institution=$1 [NC,QSA,L]
+RewriteRule ^([\w\-\_]+)/swfupload.php swfupload.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)$ /$1/ [NC,QSA,L,R]
