initial Shared tabs page to display list of users with Shared tabs

--- a/.htaccess
+++ b/.htaccess
@@ -36,6 +36,7 @@ RewriteRule ^([\w\-\_]+)/tab tab.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/page-(\d+) page.php?institution=$1&id=$2 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/collection.php collection.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/managetabs.php managetabs.php?institution=$1 [NC,QSA,L]
+RewriteRule ^([\w\-\_]+)/sharedtabs.php sharedtabs.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/help.php help.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/bulkupload.shtml bulkupload.shtml [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/bulkupload.php bulkupload.php?institution=$1 [NC,QSA,L]
