--- a/.htaccess
+++ b/.htaccess
@@ -45,4 +45,6 @@ RewriteRule ^([\w\-\_]+)/login.php login.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/login2.php login2.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/$ index.php?institution=$1 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)/swfupload.php swfupload.php?institution=$1 [NC,QSA,L]
+RewriteRule ^([\w\-\_]+)/public/([\w\-\_\'!]+)/([\w\-\_\'!]+) tab-view.php?institution=$1&user_id=$2&sharehash=$3 [NC,QSA,L]
+RewriteRule ^([\w\-\_]+)/viewtab/([\w\-\_\'!]+)/([\w\-\_\'!]+) tab-view.php?institution=$1&user_id=$2&tab=$3 [NC,QSA,L]
 RewriteRule ^([\w\-\_]+)$ /$1/ [NC,QSA,L,R]
