--- a/.htaccess
+++ b/.htaccess
@@ -9,7 +9,7 @@ php_value register_globals "0"
 php_value auto_detect_line_endings "1"
 php_value short_open_tag "1"
 
-IndexIgnore *.LCK
+#IndexIgnore *.LCK
 RewriteEngine on
 
 # Rule key
